mockserver/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockserver
  labels:
    app: mockserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mockserver
  template:
    metadata:
      labels:
        app: mockserver
    spec:
      containers:
      - name: mockserver
        image: registry:5000/mockserver:latest
        ports:
        - containerPort: 8888
        resources:
          requests:
            cpu: "100m"
          # limits:
            # memory: "128Mi"
            # cpu: "500m"
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: mockserver
          items:
          # - key: ui.properties
          #   path: ui.properties
          # - key: game.properties
          #   path: game.properties
          - key: config.yml
            path: config.yml
