mockserver/service.yml
kind: Service
apiVersion: v1
metadata:
  name: mockserver
spec:
  selector:
    app: mockserver
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8888
