mockserver/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mockserver
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: mockserver.minikube
    http:
      paths:
      - backend:
          serviceName: mockserver
          servicePort: 8888
